--- a/app.json
+++ b/app.json
@@ -80,7 +80,7 @@
       "required": false
     },
     "TG_BOT_USER_NAME_BF_HER": {
-      "description": "Needed for inline buttons maker. Make a bot at http://telegram.dog/BotFather and get the username of your bot",
+      "description": "Needed for inline buttons maker. Make a bot at @BotFather and get the username of your bot",
       "value": "",
       "required": true
     },
